--- a/HK-main/HK-main/imagens de praia/index.html
+++ b/HK-main/HK-main/imagens de praia/index.html
@@ -21,25 +21,34 @@
 
 </div>
   
-<div class="container">
+<div class="container espancamento">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 espbutton">
       <div class="DOWN"><img src="img/Paia.jpeg"></div>
       <h3>Praia 1🥵</h3>
       <p>Uma praia bem com cara de praia, parece uma praia 🙃</p>
       <p>o diferente é que tem um tipo de castelo eu acho, não sei ¯\_(ツ)_/¯</p>
+      <div class="link-config text-center">
+        <a href="">Saba Mais</a>
+      </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 espbutton">
       <div class="NOHAPPY"><img src="img/Paraia.jpg"></div>
       <h3>Praia 2🫣</h3>
       <p>Uma praia bem bonitinha e colorida perfeita pra chamar a família 👌 </p>
       <p>tirando o fato que ela fica na itália, mas fazer oq? 🫠</p>
+      <div class="link-config text-center">
+        <a href="">Saba Muito</a>
+      </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 espbutton">
       <div class="SADDY"><img src="img/Praia.jpg"></div>
       <h3>Praia 3🫢</h3>        
       <p>Uma praia bastante bonita para passa a lua de mel 💯</p>
       <p>Vamos Ana Carolina me aceita logo em casamento po 😭 </p>
+      <div class="link-config text-center">
+        <a href="">Saba Demais</a>
+      </div>
     </div>
   </div>
 </div>
